# anchor-nft-staking

./: Anchor.toml  package-lock.json
programs/anchor-nft-staking/: Cargo.toml
programs/anchor-nft-staking/src/: lib.rs
programs/lootbox-program/: Cargo.toml
programs/lootbox-program/src/: lib.rs
tests/: anchor-nft-staking copy.ts  anchor-nft-staking.ts
tests/utils/: setupNft.ts
