[package]
name = "lootbox-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lootbox_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version="0.26.0", features=["init-if-needed"] }
anchor-spl = "0.26.0"
anchor-nft-staking = { path = "../anchor-nft-staking", features = ["cpi"] }
mpl-token-metadata = { version="1.4.1", features=["no-entrypoint"] }